fixed color coding of weapons and active utilities which cannot remain online when powerplant is damanged or malfunctioning

--- a/edsy.css
+++ b/edsy.css
@@ -2006,67 +2006,117 @@ BODY.onlybest.experimental #outfitting_modules.SLOT #outfitting_modules_picker.s
 	visibility: visible;
 }
 
-#outfitting_fit_slots.priority1mfn .priority1 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority2mfn .priority2 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority3mfn .priority3 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority4mfn .priority4 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority5mfn .priority5 .checkbox INPUT:checked + DIV .check {
+#outfitting_fit_slots.priority1mfnret .priority1ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority2mfnret .priority2ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority3mfnret .priority3ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority4mfnret .priority4ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority5mfnret .priority5ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority1mfndep .priority1dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority2mfndep .priority2dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority3mfndep .priority3dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority4mfndep .priority4dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority5mfndep .priority5dep .checkbox INPUT:checked + DIV .check {
 	background-color: var(--colorblue5);
 }
-#outfitting_fit_slots.priority1mfn .priority1 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority2mfn .priority2 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority3mfn .priority3 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority4mfn .priority4 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority5mfn .priority5 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority1mfn .priority1 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority2mfn .priority2 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority3mfn .priority3 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority4mfn .priority4 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority5mfn .priority5 .checkbox INPUT + DIV .check::after {
+#outfitting_fit_slots.priority1mfnret .priority1ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority2mfnret .priority2ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority3mfnret .priority3ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority4mfnret .priority4ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority5mfnret .priority5ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority1mfnret .priority1ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority2mfnret .priority2ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority3mfnret .priority3ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority4mfnret .priority4ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority5mfnret .priority5ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority1mfndep .priority1dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority2mfndep .priority2dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority3mfndep .priority3dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority4mfndep .priority4dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority5mfndep .priority5dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority1mfndep .priority1dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority2mfndep .priority2dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority3mfndep .priority3dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority4mfndep .priority4dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority5mfndep .priority5dep .checkbox INPUT + DIV .check::after {
 	border-color: var(--colorblue3);
 }
-#outfitting_fit_slots.priority1mfn .priority1 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority2mfn .priority2 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority3mfn .priority3 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority4mfn .priority4 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority5mfn .priority5 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority1mfn .priority1 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority2mfn .priority2 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority3mfn .priority3 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority4mfn .priority4 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority5mfn .priority5 .checkbox INPUT:checked + DIV .check::after {
+#outfitting_fit_slots.priority1mfnret .priority1ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority2mfnret .priority2ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority3mfnret .priority3ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority4mfnret .priority4ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority5mfnret .priority5ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority1mfnret .priority1ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority2mfnret .priority2ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority3mfnret .priority3ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority4mfnret .priority4ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority5mfnret .priority5ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority1mfndep .priority1dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority2mfndep .priority2dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority3mfndep .priority3dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority4mfndep .priority4dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority5mfndep .priority5dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority1mfndep .priority1dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority2mfndep .priority2dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority3mfndep .priority3dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority4mfndep .priority4dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority5mfndep .priority5dep .checkbox INPUT:checked + DIV .check::after {
 	border-color: var(--colorblue5);
 }
 
-#outfitting_fit_slots.priority1dmg .priority1 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority2dmg .priority2 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority3dmg .priority3 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority4dmg .priority4 .checkbox INPUT:checked + DIV .check,
-#outfitting_fit_slots.priority5dmg .priority5 .checkbox INPUT:checked + DIV .check {
+#outfitting_fit_slots.priority1dmgret .priority1ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority2dmgret .priority2ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority3dmgret .priority3ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority4dmgret .priority4ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority5dmgret .priority5ret .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority1dmgdep .priority1dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority2dmgdep .priority2dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority3dmgdep .priority3dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority4dmgdep .priority4dep .checkbox INPUT:checked + DIV .check,
+#outfitting_fit_slots.priority5dmgdep .priority5dep .checkbox INPUT:checked + DIV .check {
 	background-color: var(--colorgreen5);
 }
-#outfitting_fit_slots.priority1dmg .priority1 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority2dmg .priority2 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority3dmg .priority3 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority4dmg .priority4 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority5dmg .priority5 .checkbox INPUT + DIV .check::before,
-#outfitting_fit_slots.priority1dmg .priority1 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority2dmg .priority2 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority3dmg .priority3 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority4dmg .priority4 .checkbox INPUT + DIV .check::after,
-#outfitting_fit_slots.priority5dmg .priority5 .checkbox INPUT + DIV .check::after {
+#outfitting_fit_slots.priority1dmgret .priority1ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority2dmgret .priority2ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority3dmgret .priority3ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority4dmgret .priority4ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority5dmgret .priority5ret .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority1dmgret .priority1ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority2dmgret .priority2ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority3dmgret .priority3ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority4dmgret .priority4ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority5dmgret .priority5ret .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority1dmgdep .priority1dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority2dmgdep .priority2dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority3dmgdep .priority3dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority4dmgdep .priority4dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority5dmgdep .priority5dep .checkbox INPUT + DIV .check::before,
+#outfitting_fit_slots.priority1dmgdep .priority1dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority2dmgdep .priority2dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority3dmgdep .priority3dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority4dmgdep .priority4dep .checkbox INPUT + DIV .check::after,
+#outfitting_fit_slots.priority5dmgdep .priority5dep .checkbox INPUT + DIV .check::after {
 	border-color: var(--colorgreen3);
 }
-#outfitting_fit_slots.priority1dmg .priority1 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority2dmg .priority2 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority3dmg .priority3 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority4dmg .priority4 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority5dmg .priority5 .checkbox INPUT:checked + DIV .check::before,
-#outfitting_fit_slots.priority1dmg .priority1 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority2dmg .priority2 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority3dmg .priority3 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority4dmg .priority4 .checkbox INPUT:checked + DIV .check::after,
-#outfitting_fit_slots.priority5dmg .priority5 .checkbox INPUT:checked + DIV .check::after {
+#outfitting_fit_slots.priority1dmgret .priority1ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority2dmgret .priority2ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority3dmgret .priority3ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority4dmgret .priority4ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority5dmgret .priority5ret .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority1dmgret .priority1ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority2dmgret .priority2ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority3dmgret .priority3ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority4dmgret .priority4ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority5dmgret .priority5ret .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority1dmgdep .priority1dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority2dmgdep .priority2dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority3dmgdep .priority3dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority4dmgdep .priority4dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority5dmgdep .priority5dep .checkbox INPUT:checked + DIV .check::before,
+#outfitting_fit_slots.priority1dmgdep .priority1dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority2dmgdep .priority2dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority3dmgdep .priority3dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority4dmgdep .priority4dep .checkbox INPUT:checked + DIV .check::after,
+#outfitting_fit_slots.priority5dmgdep .priority5dep .checkbox INPUT:checked + DIV .check::after {
 	border-color: var(--colorgreen5);
 }
 
